# Estimation-Term-Project

./: CMakeLists.txt  EstimationTPMain.cpp  EstimationTPMain.h  page218Example.txt  plot_all.m  plot_data.m  plot_immCT.m  plot_monte_carlo_results.m  test.txt
Octave Scripts/: load_performance_data.m  plot_all.m  plot_imm.m  plot_measurements.m  plot_monte_carlo_results.m
Testing Data/: immCT.txt  immL.txt  kf.txt  measurements.txt
Testing Data/Generated Target Trajectories/: Term Project Data.txt  page218Example.txt
Testing Data/Performance Data/immCT/: FPOS.txt  FVEL.txt  MOD2PR.txt  NEES.txt  NORXE.txt  RMSCRS.txt  RMSPOS.txt  RMSSPD.txt  RMSVEL.txt
Testing Data/Performance Data/immL/: FPOS.txt  FVEL.txt  MOD2PR.txt  NORXE.txt  RAW.txt  RMSCRS.txt  RMSPOS.txt  RMSSPD.txt  RMSVEL.txt
Testing Data/Performance Data/kf/: FPOS.txt  FVEL.txt  NEES.txt  NORXE.txt  RAWRMSPOS.txt  RMSCRS.txt  RMSPOS.txt  RMSSPD.txt  RMSVEL.txt
include/: AzimuthSensor.h  EstimationTPDataGenerator.h  EstimationTPSensor.h  EstimationTPSimulator.h  EstimationTPTypeDefinitions.h  ExtendedKalmanFilter.h  IMM.h  KalmanFilter.h  PerformanceEvaluator.h  RangeSensor.h  Sensor.h  Target.h
src/: AzimuthSensor.cpp  EstimationTPDataGenerator.cpp  EstimationTPSensor.cpp  ExtendedKalmanFilter.cpp  IMM.cpp  KalmanFilter.cpp  PerformanceEvaluator.cpp  RangeSensor.cpp  Target.cpp
